<resources>
    <string name="app_name">UTAH Fishing Report</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="no_network">Network speed not optimal(˵¯͒⌢͗¯͒˵)</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="api_error">出了点小问题，别担心，( •̀ .̫ •́ )✧</string>
    <string name="version_name">Utah fishing report Version-</string>
    <string name="can_not_find_version_name">Could not find version name</string>
    <string name="share_txt">欢迎使用“就看天气”，希望每天都是好心情，您可以在http://www.wandoujia.com/apps/com.xiecc.seeWeather下载</string>
    <string name="share_app">Share Utah fishing report</string>
    <string name="alipay">xcc3641@163.com</string>
    <string name="license">Copyright 2016 HugoXie  Licensed under the Apache License, Version 2.0 (the \"License\")</string>
    <string name="app_html">https://github.com/xcc3641/SeeWeather</string>
    <string name="readme">https://github.com/xcc3641/SeeWeather/blob/master/README.md</string>

    <string name="chage_icon">更换图标</string>
    <string name="nav_city">选择城市</string>
    <string name="setting">Settings</string>
    <string name="about">About</string>
    <string name="multi_cities">多城市管理</string>
    <string name="double_exit">Press one more to exit</string>
    <string name="complete">Loading complete，✺◟(∗❛ัᴗ❛ั∗)◞✺,</string>
    <string name="errorLocation">定位失败,加载默认城市</string>

    <string name="aboutContent">就看天气该应用就是如同它的名字一样，只做一个单纯、简单的看天气软件。这么多天气软件，你选择了我，这是我的幸运。\n从15年10月上线，到目前经历两次重大改版，一次代码的重构，一次界面的大幅度改动，目的都是为了你们。
    在开源的过程中，收到了很多来自有趣的你们的邮件。\n我也曾遇到过棘手的问题无处咨询又谷歌不到。那个时候的我，也可能是现在的你。所以我希望能够帮助到你。</string>
    <string name="open_source">• RxJava: github.com/ReactiveX/RxJava\n• RxAndroid: github.com/ReactiveX/RxAndroid\n• Retrofit: github.com/square/retrofit\n• Glide: github.com/bumptech/glide\n• YujunZhu 设计师提供多城市卡片设计\n• 和风天气提供数据支持\n• 高德定位提供位置定位服务</string>
    <string name="bugTableUrl">https://www.wenjuan.com/s/YbqANfc/</string>
    <string name="about_fishing_report">鱼情报告软件，作者Peter Nelson</string>
    <string-array name="icons">
        <item>图标一</item>
        <item>图标二</item>
    </string-array>

    <string-array name="cache_time">
        <item>禁止刷新</item>
        <item>每1小时</item>
        <item>每3小时</item>
        <item>每6小时</item>
    </string-array>

    <string name="google_maps_api_key">AIzaSyDjgWQjZXIaUfJ4TrL8IkGg8osz3JctNek</string>
    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="utah_stock_report_list">Stocking report</string>
    <string name="map">Fishing Report Map</string>
    <string name="utah_fishing_report">Fishing Report</string>
    <string name="choose_report_filter">Choose a filter</string>
    <string name="avg_len">Average Length</string>
    <string name="stock_date">Stock Date</string>
    <string name="send_to">Share</string>
    <string name="favorite">My favorite</string>
    <string name="my_license">My license</string>
    <string name="utah_fishing_calendar">Fishing Calendar</string>
    <string name="share_fishing_app">Share fishing app</string>

</resources>
