<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorite"/>

        <item
            android:id="@+id/nav_license"
            android:icon="@drawable/ic_action_license"
            android:title="@string/my_license"/>

    </group>

    <item android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/nav_set"
                android:icon="@drawable/ic_menu_set"
                android:title="@string/setting"/>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/about"/>
        </menu>
    </item>


</menu>
